--- a/CCL_Project/index.html
+++ b/CCL_Project/index.html
@@ -60,7 +60,7 @@
 					</li></ul>
 				
 				<div class="navbar-buttons mbr-section-btn">
-					<a class="btn btn-primary display-4">Get Started</a>
+					<a class="btn btn-primary display-4" >Get Started</a>
 				</div>
 			</div>
 		</div>
@@ -459,7 +459,7 @@
         <div class="row mb-5 justify-content-center">
             <div class="col-12 content-head">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2">
-                    <strong>Raving</strong>
+                    <strong>Rating</strong>
                 </h3>
                 
             </div>
